add call for speakers content to home and change early bird pricing deadline

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -65,10 +65,15 @@
 					<p>World 2019 will be your best opportunity of the year to hear success stories and network with your peers, get a sneak preview of new features, and gain quick skills with onsite&nbsp;workshops.</p>
 					<a href="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/files/d2dcc784ba3c40789ce046fe4f35681c.docx" class="cta-button orange carat" target="_blank">Justification Letter</a>
 				</div>
-				<div class="bullet-group margin-top-40 margin-bottom-40">
+				<div class="bullet-group margin-top-40">
 					<h5 class="text-uppercase text-bold">Sponsorship</h5>
 					<p>MicroStrategy World is a great opportunity for partners to showcase solutions and network with leading companies. If you’re interested in sponsorship or have any questions, contact&nbsp;us.</p>
 					<a href="mailto:azavada@microstrategy.com?subject=World 2019 sponsorship inquiry" class="cta-button orange carat">Contact us</a>
+				</div>
+				<div class="bullet-group margin-top-40 margin-bottom-40">
+					<h5 class="text-uppercase text-bold">Call for Speakers</h5>
+					<p>Passionate about MicroStrategy? Share your story at World&nbsp;2019.</p>
+					<a href="https://www.cvent.com/c/abstracts/d4332719-f83e-4369-91ef-eb7249af7822" target="_blank" class="cta-button orange carat">Submit a proposal</a>
 				</div>
 			</div>
 			<div class="col md-12 lg-7 z-0 collapse">
@@ -283,7 +288,7 @@
 			<div class="col md-10 lg-9 xl-8">
 				<div class="bullet-group large">
 					<h2 class="h3 text-uppercase text-bold">Pricing and Registration</h2>
-					<p class="h4">Register early and save, or take advantage of our promotional&nbsp;offers.</p>
+					<p class="h4">Register early and save, or take advantage of our promotional&nbsp;offers*.</p>
 				</div>
 			</div>
 		</div>
@@ -292,7 +297,7 @@
 				<div class="pricing-block current">
 					<span class="type">Early Bird</span>
 					<span class="price"><span class="currency">$</span>1195</span>
-					<span class="date">Until Sep&nbsp;30, 2018</span>
+					<span class="date">Until Oct&nbsp;31, 2018</span>
 					<a class="cta-button orange carat expand" href="{[E-RSVP YES URL]}">Register now</a>
 				</div>
 			</div>
@@ -354,6 +359,11 @@
 					<h4 class="text-normal">Government and non-profit&nbsp;rate</h4>
 					<p>For special Government or Non-Profit rates, email <a class="text-white" href="mailto:microstrategyworld@microstrategy.com?subject=Inquiry about MicroStrategy World special government and non-profit rate">microstrategyworld@microstrategy.com.</a></p>
 				</div>
+			</div>
+		</div>
+		<div class="row h-left">
+			<div class="col md-10 lg-8">
+				<p><small>*Special offers cannot be combined with any other offer or promotional&nbsp;code.</small></p>
 			</div>
 		</div>
 		<div class="pattern-overlay z-1">
