--- a/HTML/site footer.html
+++ b/HTML/site footer.html
@@ -5,8 +5,8 @@
 		</div>
 		<div class="col lg-10 xl-9 footer-links">
 			Copyright © 2018 MicroStrategy, Inc. All Rights Reserved.
-			<a class="link" href="mailto:events@microstrategy.com?subject=Question%20about%20MicroStrategy%20World%202019">Contact Us</a>
-			<a class="link" href="https://www.microstrategy.com/us/resources/upcoming-events" target="_blank">More Events</a>
+			<a class="link" href="mailto:microstrategyworld@microstrategy.com?subject=Question%20about%20MicroStrategy%20World%202019">Contact Us</a>
+			<a class="link" href="https://www.microstrategy.com/us/resources/events" target="_blank">More Events</a>
 			<a class="link" href="https://www.microstrategy.com" target="_blank">MicroStrategy.com</a>
 		</div>
 	</div>
