new homepage hero with revolving text WIP

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -1,6 +1,6 @@
 <div id="home-page">
 
-	<section id="hero" class="grid-banner no-padding">
+	<!-- <section id="hero" class="grid-banner no-padding">
 		<div class="row expand stretch collapse">
 
 			<div class="col lg-6 title-copy-col">
@@ -46,7 +46,74 @@
 
 			<div class="col hide-sm lg-3 photo phoenix-city height-large"></div>
 		</div>
+	</section> -->
+
+
+	<section id="hero-v3">
+		<div class="row between">
+			<div class="col md-6 lg-8">
+				<h1 class="text-revolver">
+					<span class="static-text">A Platform for</span>
+					<span class="rev-window">
+						<span class="rev-block text-pattern-squiggles">
+							<span class="rev-text">Intelligence</span>
+						</span>
+						<span class="rev-block text-pattern-squiggles">
+							<span class="rev-text">Discovery</span>
+						</span>
+						<span class="rev-block text-pattern-squiggles">
+							<span class="rev-text">Answers</span>
+						</span>
+						<span class="rev-block text-pattern-squiggles">
+							<span class="rev-text">Action</span>
+						</span>
+						<span class="rev-block text-pattern-squiggles">
+							<span class="rev-text">You</span>
+						</span>
+					</span>
+				</h1>
+				<h2 class="text-blue text-normal">Come meet the new&nbsp;MicroStrategy.</h2>
+			</div>
+		</div>
+		<div class="row h-left">
+			<div class="col shrink">
+				<div class="icon-lockup">
+					<img class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/cd273c3fb82c4a928c2cddc75b175cc4.png" />
+					<p>
+						<strong class="text-uppercase text-bold">February</strong>
+						4th &ndash; 6th 2019
+					</p>
+				</div>
+			</div>
+			<div class="col shrink">
+				<div class="icon-lockup">
+					<img class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/1b11dca49d414806b2b06791930779af.png" />
+					<p>
+						<strong class="text-uppercase text-bold">Phoenix, Arizona</strong>
+						Phoenix Convention Center
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="row h-left">
+			<div class="col md-6 lg-4">
+				<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
+			</div>
+		</div>
 	</section>
+
+	<div class="pattern-between row expand collapse">
+		<div class="col release background-pattern pattern-tartan pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-squiggles pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-triangles pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-round-dots pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-stacked-bars pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-ribbon pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-split-circles pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-square-dots pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-sparse-triangles pattern-small height-small"></div>
+		<div class="col release background-pattern pattern-vertical-bars pattern-small height-small"></div>
+	</div>
 
 	<section id="about" class="background-red section-square-dots no-padding-bottom">
 		<div class="row h-left z-2">
@@ -222,19 +289,19 @@
 					<div class="row collapse-y">
 						<div class="col md-4">
 							<div class="time-block">
-								<div class="time-label">Monday, February 3</div>
+								<div class="time-label">Monday, February 4</div>
 								5:45pm – 7:15pm
 							</div>
 						</div>
 						<div class="col md-4">
 							<div class="time-block">
-								<div class="time-label">Tuesday, February 4</div>
+								<div class="time-label">Tuesday, February 5</div>
 								8:00am – 9:00AM; 12:30pm – 2:00pm
 							</div>
 						</div>
 						<div class="col md-4">
 							<div class="time-block">
-								<div class="time-label">Wednesday, February 5</div>
+								<div class="time-label">Wednesday, February 6</div>
 								8:00am – 9:00AM; 12:45pm – 2:00pm
 							</div>
 						</div>
