updated world files

--- a/HTML/registration first page.html
+++ b/HTML/registration first page.html
@@ -15,9 +15,9 @@
 	<div class="row h-left pricing-wrapper collapse v-middle">
 		<div class="col shrink-md">
 			<div class="pricing-block slim current">
-				<span class="type">Early Bird</span>
+				<span class="type">Extended Early Bird</span>
 				<span class="price"><span class="currency">$</span>1195</span>
-				<span class="date">Until Oct&nbsp;31, 2018</span>
+				<span class="date">Until Nov&nbsp;16, 2018</span>
 			</div>
 		</div>
 		<div class="col shrink-md">
