Fixing "All Sessions" Page

--- a/HTML/Global.html
+++ b/HTML/Global.html
@@ -15,9 +15,9 @@
 	<script>
 		$(function ()
 		{
-			$("#agenda").load("sessions%20by%20role.html");
+			$("#agenda").load("Agenda.html");
 			$("#styles").load("../CSS/main.css");
-			$("#scripts").load("../scripts/sessions-by-role.js");
+			$("#scripts").load("../scripts/agenda.js");
 		});
 	</script>
 </head>
