--- a/HTML/Agenda_builder-version.html
+++ b/HTML/Agenda_builder-version.html
@@ -1,4 +1,4 @@
-<div id="agenda-page">
+<div id="agenda-page" class="temp-builder-version">
 	<div class="pattern-between row expand collapse">
 		<div class="col release background-pattern pattern-tartan pattern-small height-small"></div>
 		<div class="col release background-pattern pattern-squiggles pattern-small height-small"></div>
@@ -12,7 +12,7 @@
 		<div class="col release background-pattern pattern-vertical-bars pattern-small height-small"></div>
 	</div>
 
-	<section id="hero-banner" class="background-blue section-sparse-triangles">
+	<section id="hero-banner" class="background-blue no-padding-bottom section-sparse-triangles">
 		<div class="row">
 			<div class="col lg-9 xl-8">
 				<div class="bullet-group large">
@@ -38,21 +38,21 @@
 			<section id="filter-box" class="background-green no-padding">
 				<div class="row around v-bottom">
 					<div class="col md-4 lg-3">
-						<h5 class="text-uppercase text-bold">Topic</h5>
+						<h5 class="text-uppercase text-bold topic-label">Topic</h5>
 						<div id="topic-filter" class="jplist-checkbox-dropdown" data-control-type="checkbox-dropdown" data-control-name="topic-filter" data-control-action="filter" data-no-selected-text="All Topics" data-one-item-text="{selected}" data-many-items-text="{num} selected">
 							<ul style="display: none">
 							</ul>
 						</div>
 					</div>
 					<div class="col md-4 lg-3">
-						<h5 class="text-uppercase text-bold">Role</h5>
+						<h5 class="text-uppercase text-bold role-label">Role</h5>
 						<div id="role-filter" class="jplist-checkbox-dropdown" data-control-type="checkbox-dropdown" data-control-name="role-filter" data-control-action="filter" data-no-selected-text="All Roles/Personas" data-one-item-text="{selected}" data-many-items-text="{num} selected">
 							<ul style="display: none">
 							</ul>
 						</div>
 					</div>
 					<div class="col md-4 lg-3">
-						<h5 class="text-uppercase text-bold">Program</h5>
+						<h5 class="text-uppercase text-bold program-label">Program</h5>
 						<div id="program-filter" class="jplist-checkbox-dropdown" data-control-type="checkbox-dropdown" data-control-name="program-filter" data-control-action="filter" data-no-selected-text="All Programs" data-one-item-text="{selected}" data-many-items-text="{num} selected">
 							<ul style="display: none">
 							</ul>
@@ -119,12 +119,12 @@
 									<span class="session-speaker">Speaker 3</span>
 								</div>
 							</div>
-							<div class="text-block-group tiny tags">
+							<div class="text-label-group tiny tags">
 								<span class="tag-heading">Tags:</span>
-								<span class="text-block program-tag">program tag</span>
-								<span class="text-block role-tag">role tag 1</span>
-								<span class="text-block role-tag">role tag 2</span>
-								<span class="text-block topic-tag">topic tag 1</span>
+								<span class="text-label program-tag">program tag</span>
+								<span class="text-label role-tag">role tag 1</span>
+								<span class="text-label role-tag">role tag 2</span>
+								<span class="text-label topic-tag">topic tag 1</span>
 							</div>
 							<div class="add-to-agenda added"><span class="plus-icon"></span><span class="txt-add">Add to</span><span class="txt-remove">Remove from</span> my agenda</div>
 							<span class="details-expand">See Details</span>
@@ -140,12 +140,12 @@
 									<span class="session-speaker">Speaker 3</span>
 								</div>
 							</div>
-							<div class="text-block-group tiny tags">
+							<div class="text-label-group tiny tags">
 								<span class="tag-heading">Tags:</span>
-								<span class="text-block program-tag">program tag</span>
-								<span class="text-block role-tag">role tag 1</span>
-								<span class="text-block role-tag">role tag 2</span>
-								<span class="text-block topic-tag">topic tag 1</span>
+								<span class="text-label program-tag">program tag</span>
+								<span class="text-label role-tag">role tag 1</span>
+								<span class="text-label role-tag">role tag 2</span>
+								<span class="text-label topic-tag">topic tag 1</span>
 							</div>
 							<div class="add-to-agenda added"><span class="plus-icon"></span><span class="txt-add">Add to</span><span class="txt-remove">Remove from</span> my agenda</div>
 							<span class="details-expand">See Details</span>
@@ -161,12 +161,12 @@
 									<span class="session-speaker">Speaker 3</span>
 								</div>
 							</div>
-							<div class="text-block-group tiny tags">
+							<div class="text-label-group tiny tags">
 								<span class="tag-heading">Tags:</span>
-								<span class="text-block program-tag">program tag</span>
-								<span class="text-block role-tag">role tag 1</span>
-								<span class="text-block role-tag">role tag 2</span>
-								<span class="text-block topic-tag">topic tag 1</span>
+								<span class="text-label program-tag">program tag</span>
+								<span class="text-label role-tag">role tag 1</span>
+								<span class="text-label role-tag">role tag 2</span>
+								<span class="text-label topic-tag">topic tag 1</span>
 							</div>
 							<div class="add-to-agenda added"><span class="plus-icon"></span><span class="txt-add">Add to</span><span class="txt-remove">Remove from</span> my agenda</div>
 							<span class="details-expand">See Details</span>
@@ -180,8 +180,9 @@
 		<!-- Agenda Bar View Tab-->
 		<div id="agenda-grid" class="tab-content hide-tab" style="display:none">
 			<section class="background-navy">
-				<div class="row z-1">
-					<div class="col agenda-bars">
+				<!-- Agenda Bar View-->
+				<div class="row">
+					<div class="agenda-bars">
 
 						<div class="day-label">
 							<div class="event-day">Monday</div>
@@ -192,34 +193,34 @@
 
 						<div class="label-col ">
 							<div class="event-label">Education</div>
-							<div class="event-label">Sessions & Workshops</div>
+							<div class="event-label">Expo Hall &amp; Lounge</div>
 							<div class="event-label">General Session</div>
-							<div class="event-label">Expo Hall & Lounge</div>
-							<div class="event-label">Block Party</div>
-							<div class="event-label">Futures Presentation</div>
+							<div class="event-label">Sessions &amp; Workshops</div>
 							<div class="event-label">Executive Forum</div>
+							<div class="event-label">Women’s Networking Reception</div>
+							<div class="event-label">Block Party</div>
 							<div class="event-label">Partner Summit</div>
-							<div class="event-label">At the Table Panel & Women’s Networking Reception</div>
+							<div class="event-label">Futures Presentation</div>
 							<div class="event-label">Datathon</div>
 						</div>
 
 						<div class="event-col">
 							<span class="event-title" title="Education">Education</span>
 							<span class="event-title" title="Education">Education</span>
-							<span class="event-title" title="Sessions">Sessions</span>
-							<span class="event-title" title="Continental Keynotes">Keynotes</span>
-							<span class="event-title" title="Engagement Zone">Engagement Zone</span>
+							<span class="event-title" title="Expo Hall &amp; Lounge">Expo Hall &amp; Lounge</span>
+							<span class="event-title" title="Continental General Session">General Session</span>
+							<span class="event-title" title="SessionsWorkshops">Sessions &amp; Workshops</span>
+							<span class="event-title" title=" Executive Forum">Executive Forum</span>
+							<span class="event-title" title="At the Table Panel &amp; Women’s Networking Reception">Women’s Networking Reception</span>
 							<span class="event-title" title="Block Party">Block Party</span>
-							<span class="event-title" title="Futures">Futures</span>
-							<span class="event-title" title="Executive Summit">Executive Summit</span>
 							<span class="event-title" title="Partner Summit">Partner Summit</span>
-							<span class="event-title" title="Women's Networking">Women's Networking</span>
+							<span class="event-title" title="Futures Presentation">Futures Presentation</span>
 							<span class="event-title" title="Datathon">Datathon</span>
 						</div>
 					</div>
 				</div>
 
-				<div class="row z-1">
+				<div class="row">
 					<div class="col agenda-bars-mobile">
 
 						<div class="day-label">
@@ -296,15 +297,6 @@
 	.agenda-page .agendaMiddle .category:last-child {margin-top:0;}
 	.jplist-hidden { display: none !important; }
 
-	#agenda-page #hero-banner .bullet-group {padding-left:0;}
-
-	#agenda-page #hero-banner .bullet-group:before {
-		top:20px;
-	}
-	#agenda-page #hero-banner .bullet-group:after {
-		top:55px;
-	}
-
 	.tabs-menu {padding-bottom:0px;}
 	#filter-box {
 		overflow:visible;
@@ -347,36 +339,6 @@
 		width:60px;
 		max-width:100%;
 		height:auto;
-	}
-
-	.tab-content {
-		position:relative; z-index:2;
-		opacity:1;
-		transform:translateY(0);
-		transition: all 0.5s ease-out 0s;
-	}
-	.tab-content.hide-tab {
-		padding:0;
-		opacity:0;
-		transform:translateY(100px);
-		transition: all 0.5s ease-out 0s;
-	}
-
-	.agenda-list, .agenda-card {
-		color:#555555;
-	}
-
-	.add-to-agenda {
-		z-index:3;
-		cursor:pointer;
-	}
-
-	.add-to-agenda .txt-remove,
-	.add-to-agenda.added .txt-add {
-		display:none;
-	}
-	.add-to-agenda.added .txt-remove {
-		display:inline;
 	}
 
 	.agenda-bars {
