--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 				<div class="last-call">
-					<p>Early bird pricing extended until Nov 16, 2018</p>
+					<p>Last day for Early Bird pricing</p>
 				</div>
 				<div class="cta-home-group">
 					<a class="cta-button large red carat" href="{[E-RSVP YES URL]}">Register now</a>
@@ -750,31 +750,30 @@
 	<div class="col release background-pattern pattern-vertical-bars pattern-small height-small">&nbsp;</div>
 </div>
 
-<section id="call-to-action_new">
+<section id="call-to-action">
 	<div class="final-cta">
 		<div class="row">
-			<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0" />
+			<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0">
 		</div>
 		<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
 	</div>
 
 	<div class="final-date">
 		<div class="icon-lockup text-white">
-			<img alt="" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32" />
+			<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32">
 			<p>
 				<strong class="text-uppercase text-bold text-white">February</strong>
 				4th – 6th 2019
 			</p>
 		</div>
 		<div class="icon-lockup text-white">
-			<img alt="" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32" />
+			<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32">
 			<p>
 				<strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
 				Phoenix Convention Center
 			</p>
 		</div>
 	</div>
-
 </section>
 
 
