--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -1,3 +1,4 @@
+<div id="sponsors-page">
 <section class="sponsor-hero section-tartan background-orange">
     <div class="pattern-between row expand collapse">
 		<div class="col release background-pattern pattern-tartan pattern-small height-small"></div>
@@ -244,8 +245,37 @@
         <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
     </div>
 </section>
+
+<section id="call-to-action">
+	<div class="final-cta">
+		<div class="row">
+			<img src="http://www.microstrategy.com/Strategy/media/images/logos/branding/world2019-wht-logo.svg" alt="World 2019 white logo" width="0" height="0">
+		</div>
+		<a class="cta-button large red expand" href="{[E-RSVP YES URL]}">Register now</a>
+	</div>
+
+	<div class="final-date">
+		<div class="icon-lockup text-white">
+			<img alt="date icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1bbbb629eb34c34b6462bbb28612345.png" width="32" height="32">
+			<p>
+				<strong class="text-uppercase text-bold text-white">February</strong>
+				4th – 6th 2019
+			</p>
+		</div>
+		<div class="icon-lockup text-white">
+			<img alt="location icon" class="icon" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0a1ac4e6db4c4a61834db54ffeebff71.png" width="32" height="32">
+			<p>
+				<strong class="text-uppercase text-bold text-white">Phoenix, Arizona</strong>
+				Phoenix Convention Center
+			</p>
+		</div>
+	</div>
+</section>
+</div>
+
 <style>
     .register-btn-bottom { display: none; }
+	div.bottom {padding:0;}
     .sponsor-hero {
         padding: 0 0 40px 0;
         margin-top: 40px;
